--- a/_columns/The_Big_Picture/zh-cn/2024-10-23.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-10-23.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Selling Hits Tech Stocks The Hardest; Rising Bond Yields Fuel Negative Sentiment
+  Stock Market Selling Hits Tech Stocks The Hardest; Rising Bond Yields Fuel Negative Sentiment	股市抛售对科技股的打击最大;债券收益率上升助长负面情绪
 date: 2024-10-23 18:00 -0700
 author: KEN SHREVE
 ---
@@ -10,69 +10,85 @@ author: KEN SHREVE
 
 
 
-Sellers came into the stock market Wednesday as the 10-year Treasury yield continued its upward ascent, fueling fears that future rate cuts by the Federal Reserve might not be as aggressive as first thought.
+Sellers came into the stock market Wednesday as the 10-year Treasury yield continued its upward ascent, fueling fears that future rate cuts by the Federal Reserve might not be as aggressive as first thought.  
+随着 10 年期美国国债收益率继续上涨，卖家周三进入股市，这加剧了人们对美联储未来降息可能不会像最初想象的那样激进的担忧。
 
 
 
 
-Heavy selling in **Palo Alto Networks** ([PANW](https://research.investors.com/quote.aspx?symbol=PANW)), **Arm Holdings** ([ARM](https://research.investors.com/quote.aspx?symbol=ARM)) and **Qualcomm** ([QCOM](https://research.investors.com/quote.aspx?symbol=QCOM)) weighed on the Nasdaq 100, which fell 1.5% and closed just below its 21-day exponential moving average. Sellers also knocked **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) lower by nearly 3%, but the decline simply amounted to a test of the 10-day line.
+Heavy selling in **Palo Alto Networks** ([PANW](https://research.investors.com/quote.aspx?symbol=PANW)), **Arm Holdings** ([ARM](https://research.investors.com/quote.aspx?symbol=ARM)) and **Qualcomm** ([QCOM](https://research.investors.com/quote.aspx?symbol=QCOM)) weighed on the Nasdaq 100, which fell 1.5% and closed just below its 21-day exponential moving average. Sellers also knocked **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) lower by nearly 3%, but the decline simply amounted to a test of the 10-day line.  
+**Palo Alto Networks** （[PANW](https://research.investors.com/quote.aspx?symbol=PANW)）、**Arm Holdings** （[ARM](https://research.investors.com/quote.aspx?symbol=ARM)） 和高**通** （[QCOM）](https://research.investors.com/quote.aspx?symbol=QCOM) 的大量抛售打压了纳斯达克 100 指数，该指数下跌 1.5%，收盘价略低于其 21 天指数移动平均线。卖家还使 **Nvidia** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 下跌了近 3%，但下跌只是对 10 日线的测试。
 
 
-The Nasdaq composite slumped 1.6%, ending a five-session win streak. The Nasdaq's power trend is still intact as the index holds just above its 21-day line. The Nasdaq avoided a distribution day Wednesday due to lower volume, but it was somewhat skewed because volume was heavy Tuesday. Declining stocks on the market outnumbered advancers by nearly 3-to-1.
+The Nasdaq composite slumped 1.6%, ending a five-session win streak. The Nasdaq's power trend is still intact as the index holds just above its 21-day line. The Nasdaq avoided a distribution day Wednesday due to lower volume, but it was somewhat skewed because volume was heavy Tuesday. Declining stocks on the market outnumbered advancers by nearly 3-to-1.  
+纳斯达克综合指数下跌 1.6%，结束了连续五个交易日的上涨。纳斯达克的动力趋势仍然完好无损，因为该指数略高于其 21 日线。由于成交量较低，纳斯达克指数避免了周三的发行日，但由于周二成交量很大，因此在某种程度上出现了偏差。市场上下跌的股票数量与上涨的股票数量之比接近 3 比 1。
 
 
-Palo Alto Networks slumped nearly 5% and closed just below its 21-day line. The company on Monday tried to break out from a lengthy consolidation, but volume never came into the stock and the breakout stalled. Sentiment was also weak in the security software group after **CyberArk** ([CYBR](https://research.investors.com/quote.aspx?symbol=CYBR)) announced a share offering. CyberArk shares fell 3.5%.
+Palo Alto Networks slumped nearly 5% and closed just below its 21-day line. The company on Monday tried to break out from a lengthy consolidation, but volume never came into the stock and the breakout stalled. Sentiment was also weak in the security software group after **CyberArk** ([CYBR](https://research.investors.com/quote.aspx?symbol=CYBR)) announced a share offering. CyberArk shares fell 3.5%.  
+Palo Alto Networks 暴跌近 5%，收盘价略低于其 21 日线。该公司周一试图从漫长的整合中解脱出来，但成交量从未进入股票，突破停滞不前。在 **CyberArk** （[CYBR）](https://research.investors.com/quote.aspx?symbol=CYBR) 宣布股票发行后，安全软件集团的情绪也很疲软。CyberArk 股价下跌 3.5%。
 
 
-Qualcomm swooned nearly 4% on news that Arm wants to cancel a key license, which allows Qualcomm to design chips based on Arm architecture. Both companies are in a legal battle related to a company called Nuvia, an Arm licensee that Qualcomm acquired in 2021. Arm shares crashed nearly 7%.
+Qualcomm swooned nearly 4% on news that Arm wants to cancel a key license, which allows Qualcomm to design chips based on Arm architecture. Both companies are in a legal battle related to a company called Nuvia, an Arm licensee that Qualcomm acquired in 2021. Arm shares crashed nearly 7%.  
+有消息称 Arm 想要取消一项关键许可证，该许可证允许高通设计基于 Arm 架构的芯片，高通股价下跌了近 4%。两家公司都陷入了与一家名为 Nuvia 的公司有关的法律斗争，该公司是高通于 2021 年收购的 Arm 被许可方。Arm 股价暴跌近 7%。
 
 
-Stock Market Today: Treasury Yields Keep Climbing
--------------------------------------------------
+Stock Market Today: Treasury Yields Keep Climbing今日股市：美国国债收益率不断攀升
+-----------------------------------------------------------------
 
 
-The 10-year Treasury yield added another four basis points to just over 4.24%, a three-month high. The yield is up a whopping 64 basis points since hitting a low of 3.6% on Sept. 16.
+The 10-year Treasury yield added another four basis points to just over 4.24%, a three-month high. The yield is up a whopping 64 basis points since hitting a low of 3.6% on Sept. 16.  
+10 年期美国国债收益率再上涨 4 个基点，略高于 4.24%，创三个月高点。自 9 月 16 日触及 3.6% 的低点以来，收益率上涨了 64 个基点。
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/10/MP102324.jpg)
 
 
-With the Federal Reserve expected to cut its key lending rate by 25 basis points in November — with another rate cut expected in December — why would investors be selling bonds with a vengeance?
+With the Federal Reserve expected to cut its key lending rate by 25 basis points in November — with another rate cut expected in December — why would investors be selling bonds with a vengeance?  
+预计美联储将在 11 月将其关键贷款利率下调 25 个基点，并预计 12 月将再次降息，为什么投资者会报复性地抛售债券？
 
 
-One argument is that the stock market is pricing in a Republican presidential win, which could usher in larger deficits. Rising debt levels often cause bond investors to demand higher rates.
+One argument is that the stock market is pricing in a Republican presidential win, which could usher in larger deficits. Rising debt levels often cause bond investors to demand higher rates.  
+一种观点认为，股市正在为共和党赢得总统大选定价，这可能会带来更大的赤字。不断上升的债务水平通常会导致债券投资者要求更高的利率。
 
 
-Another argument is that a recent string of strong economic data could result in a slower pace of rate cuts. Futures traders at [CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) still expect a rate cut in December, but expectations have been dialed back.
+Another argument is that a recent string of strong economic data could result in a slower pace of rate cuts. Futures traders at [CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) still expect a rate cut in December, but expectations have been dialed back.  
+另一个论点是，最近一系列强劲的经济数据可能会导致降息步伐放缓。[CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) 的期货交易员仍预计 12 月将降息，但预期已回落。
 
 
-Earnings Sell-Offs Hit S&P
---------------------------
+Earnings Sell-Offs Hit S&P收益抛售打击标准普尔指数
+--------------------------------------
 
 
-The S&P 500 gave back 0.9%, hurt by earnings sell-offs for index members like **Enphase Energy** ([ENPH](https://research.investors.com/quote.aspx?symbol=ENPH)) and **Seagate Technology** ([STX](https://research.investors.com/quote.aspx?symbol=STX)). **McDonald's** ([MCD](https://research.investors.com/quote.aspx?symbol=MCD)) also lagged in the benchmark index after the U.S. Centers for Disease Control and Prevention linked an outbreak of E. coli to the fast food chain's Quarter Pounder sandwich.
+The S&P 500 gave back 0.9%, hurt by earnings sell-offs for index members like **Enphase Energy** ([ENPH](https://research.investors.com/quote.aspx?symbol=ENPH)) and **Seagate Technology** ([STX](https://research.investors.com/quote.aspx?symbol=STX)). **McDonald's** ([MCD](https://research.investors.com/quote.aspx?symbol=MCD)) also lagged in the benchmark index after the U.S. Centers for Disease Control and Prevention linked an outbreak of E. coli to the fast food chain's Quarter Pounder sandwich.  
+标准普尔 500 指数回吐 0.9%，受到 **Enphase Energy** （[ENPH）](https://research.investors.com/quote.aspx?symbol=ENPH) 和 **Seagate Technology** （[STX](https://research.investors.com/quote.aspx?symbol=STX)） 等指数成员的盈利抛售的影响。在美国疾病控制和预防中心将大肠杆菌的爆发与快餐连锁店的 Quarter Pounder 三明治联系起来后，**麦当劳** （[MCD）](https://research.investors.com/quote.aspx?symbol=MCD) 在基准指数中也落后。
 
 
-Market volume rose on the New York Stock Exchange, adding another distribution day to the S&P 500's count. But the Sept. 18 higher-volume decline for the index was dropped from the count because enough time has passed — 25 days — to make it less relevant. The Sept. 17 stalling session was removed from the count Tuesday for the same reason.
+Market volume rose on the New York Stock Exchange, adding another distribution day to the S&P 500's count. But the Sept. 18 higher-volume decline for the index was dropped from the count because enough time has passed — 25 days — to make it less relevant. The Sept. 17 stalling session was removed from the count Tuesday for the same reason.  
+纽约证券交易所的市场成交量上升，为标准普尔 500 指数增加了另一个分发日。但该指数 9 月 18 日的成交量下降被从统计中剔除，因为已经过去了足够的时间——25 天——使其相关性降低。出于同样的原因，9 月 17 日的停滞会议周二被从计数中删除。
 
 
-Breadth was similar on the NYSE, with losers beating winners by nearly 3-to-1.
+Breadth was similar on the NYSE, with losers beating winners by nearly 3-to-1.  
+纽约证券交易所的广度相似，失败者以近 3 比 1 击败获胜者。
 
 
-The Dow Jones Industrial Average gave back 1%, while the Russell 2000 small-cap index fell 0.8%. The Russell breached the 2,200 level and looked poised for a test of its 50-day line, but buyers lifted the index off lows. The Dow Jones also closed off lows as it tests its 21-day line.
+The Dow Jones Industrial Average gave back 1%, while the Russell 2000 small-cap index fell 0.8%. The Russell breached the 2,200 level and looked poised for a test of its 50-day line, but buyers lifted the index off lows. The Dow Jones also closed off lows as it tests its 21-day line.  
+道琼斯工业平均指数回吐了 1%，而罗素 2000 小盘股指数下跌了 0.8%。罗素突破 2,200 水平，似乎准备测试其 50 日线，但买家将指数从低点推高。道琼斯指数在测试 21 日线时也收于低点。
 
 
-Bullish Sentiment On The Rise
------------------------------
+Bullish Sentiment On The Rise看涨情绪上升
+-----------------------------------
 
 
-Meanwhile, stock market sentiment continues to tilt quite bullish, according to the latest survey of newsletter writers by Investors Intelligence. The bulls climbed to 58.3% last week, up from 57.6%.
+Meanwhile, stock market sentiment continues to tilt quite bullish, according to the latest survey of newsletter writers by Investors Intelligence. The bulls climbed to 58.3% last week, up from 57.6%.  
+与此同时，根据 Investors Intelligence 对时事通讯作者的最新调查，股市情绪继续相当看涨。上周，多头从 57.6% 攀升至 58.3%。
 
 
-Readings of 60% or above indicate extreme bullishness and have been seen ahead of stock market pullbacks in the past. It's a contrarian indicator, meaning when the crowd starts to get bullish, it's usually the time to be bearish.
+Readings of 60% or above indicate extreme bullishness and have been seen ahead of stock market pullbacks in the past. It's a contrarian indicator, meaning when the crowd starts to get bullish, it's usually the time to be bearish.  
+60% 或以上的读数表明极度看涨，并且过去在股市回调之前出现过。这是一个逆向指标，这意味着当人群开始看涨时，通常是看跌的时候。
 
 
-Stock market conditions have gotten even more challenging, even though scads of leading growth stocks continue to hold gains well after nice moves. The question now is what's left to buy? In the early stages of a new stock market uptrend, it's common to see the stock market serve up an ample supply of new buys.
+Stock market conditions have gotten even more challenging, even though scads of leading growth stocks continue to hold gains well after nice moves. The question now is what's left to buy? In the early stages of a new stock market uptrend, it's common to see the stock market serve up an ample supply of new buys.  
+股市状况变得更具挑战性，尽管一大群领先的成长股在良好的波动后继续保持涨幅。现在的问题是还有什么可以买的？在新股市上升趋势的早期阶段，通常会看到股市提供充足的新买家供应。
 
 
 
@@ -80,7 +96,8 @@ Stock market conditions have gotten even more challenging, even though scads of 
 ---
 
 
-**[Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)**
+**[Time The Market With IBD's ETF Market Strategy  
+使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)**
 
 
 
@@ -88,37 +105,47 @@ Stock market conditions have gotten even more challenging, even though scads of 
 ---
 
 
-But conditions are more challenging now with so many stocks well extended past proper buy points. Keep an eye out for new buys, but also realize it's slim pickings at the moment.
+But conditions are more challenging now with so many stocks well extended past proper buy points. Keep an eye out for new buys, but also realize it's slim pickings at the moment.  
+但现在的情况更具挑战性，因为如此多的股票远远超过了适当的买入点。留意新购买，但也要意识到目前选择很少。
 
 
-**Costco** ([COST](https://research.investors.com/quote.aspx?symbol=COST)) gave an early buy signal Wednesday when it moved with conviction above the 900 level. But a 1.4% intraday gain was more than halved by the close.
+**Costco** ([COST](https://research.investors.com/quote.aspx?symbol=COST)) gave an early buy signal Wednesday when it moved with conviction above the 900 level. But a 1.4% intraday gain was more than halved by the close.  
+**Costco** （[COST）](https://research.investors.com/quote.aspx?symbol=COST) 周三发出了早盘买入信号，当时它坚定地突破了 900 水平。但收盘时 1.4% 的涨幅减少了一半以上。
 
 
-Similarly, a strong earnings report from electronics firm **Amphenol** ([APH](https://research.investors.com/quote.aspx?symbol=APH)) fueled an early breakout, but sellers knocked shares well off highs.
+Similarly, a strong earnings report from electronics firm **Amphenol** ([APH](https://research.investors.com/quote.aspx?symbol=APH)) fueled an early breakout, but sellers knocked shares well off highs.  
+同样，电子公司 **Amphenol** （[APH](https://research.investors.com/quote.aspx?symbol=APH)） 的强劲收益报告推动了早期突破，但卖家将股价从高点拉低。
 
 
-[View the General Market indicators chart page here](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_102324.pdf)
+[View the General Market indicators chart page here  
+在此处查看一般市场指标图表页面](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_102324.pdf)
 
 
-*Follow Ken Shreve on X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.
+*Follow Ken Shreve on X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.  
+*在 X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) 上关注 Ken Shreve，了解更多股市分析和见解*。
 
 
-**YOU MAY ALSO LIKE:**
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[Top Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+[Top Growth Stocks To Buy And Watch  
+最值得购买和关注的成长型股票](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
+[Find The Best Long-Term Investments With IBD Long-Term Leaders  
+与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
 
 
-[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend  
+查看 IBD 的新风险敞口水平，以帮助您紧跟市场趋势](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?src=apa1bq)
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
+使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?src=apa1bq)
 
 
-[Futures: Tesla Soars On Earnings Surprise, Bullish Elon Musk](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-tesla-stock-earnings-elon-musk/) 
+[Futures: Tesla Soars On Earnings Surprise, Bullish Elon Musk   
+期货：特斯拉因收益意外而飙升，看涨埃隆马斯克](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-tesla-stock-earnings-elon-musk/)
 
 
 
