--- a/_columns/The_Big_Picture/zh-cn/2024-10-28.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-10-28.md
@@ -195,7 +195,8 @@ Cruise operators, which harbor large fuel costs, steamed ahead.
 **嘉年华** （[CCL](https://research.investors.com/quote.aspx?symbol=CCL)） 周一跳空上涨，上涨 4.8% 至 21.92，今天在个股中屹立不倒。在带手柄的实心cup with handle已扩大到 15%。
 
 
-**Royal Caribbean** ([RCL](https://research.investors.com/quote.aspx?symbol=RCL)), trading very tightly for days, advanced 1.3% and made an all-time high of 207.70.
+**Royal Caribbean** ([RCL](https://research.investors.com/quote.aspx?symbol=RCL)), trading very tightly for days, advanced 1.3% and made an all-time high of 207.70.  
+**皇家加勒比** （[RCL）](https://research.investors.com/quote.aspx?symbol=RCL) 连续几天交易非常紧张，上涨 1.3%，创下 207.70 点的历史新高。
 
 
 [View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_102824.pdf).
