--- a/_columns/The_Big_Picture/zh-cn/2024-10-30.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-10-30.md
@@ -119,10 +119,12 @@ IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-cor
 IBD Live：与专业人士一起学习和分析成长型股票](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
 
 
-[Get Free IBD Newsletters: Market Prep \| Tech Report \| How To Invest](https://shop.investors.com/offer/splashresponsive.aspx?id=newsletters-howtoinvest)
+[Get Free IBD Newsletters: Market Prep \| Tech Report \| How To Invest  
+获取免费的 IBD 时事通讯：市场准备 |技术报告 |如何投资](https://shop.investors.com/offer/splashresponsive.aspx?id=newsletters-howtoinvest)
 
 
-[Futures: Two Titans Beat Views Late; Robinhood Dives, Crypto Plays Skid](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-microsoft-meta-earnings-robinhood-bitcoin-plays/)
+[Futures: Two Titans Beat Views Late; Robinhood Dives, Crypto Plays Skid  
+期货：Two Titans 晚些时候击败 Views;Robinhood 跳水，Crypto 玩滑](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-microsoft-meta-earnings-robinhood-bitcoin-plays/)
 
 
 
