--- a/_columns/The_Big_Picture/zh-cn/2024-10-31.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-10-31.md
@@ -203,12 +203,10 @@ And Brazilian financial leader Nu fell below a 15.16 buy point following Monday'
 了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders  
-与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
-使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
 
 
 
