--- a/_columns/The_Big_Picture/zh-cn/2024-10-29.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-10-29.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Nasdaq Closes At Record High; Google Soars But Nvidia Rival Dives After Hours	纳斯达克收盘创下历史新高;谷歌飙升，但 Nvidia 的竞争对手在盘后跳水
+  Nasdaq Closes At Record High; Google Soars But Nvidia Rival Dives After Hours	纳斯达克收于历史高位;谷歌飙升，但 Nvidia 竞争对手在盘后跳水
 date: 2024-10-29 17:55 -0700
 author: VIDYA RAMAKRISHNAN
 ---
