--- a/_columns/Stock_Of_the_Day/zh-cn/2024-10-31.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-10-31.md
@@ -47,7 +47,7 @@ Morris 看好 Netflix 的广告支持服务产品中的广告业务。
 
 
 More than 50% of Netflix sign-ups in the third quarter were for its ad-supported tier in those markets where the ad tier is available.  
-在提供广告层的市场中，第三季度超过 50% 的 Netflix 注册用户是针对其广告支持层的注册。
+在提供广告层的市场中，第 3 季度超过 50% 的 Netflix 注册用户是其广告支持层。
 
 
 Meanwhile, MoffettNathanson analyst Robert Fishman declared Netflix the victor in the streaming video market in an Oct. 23 report.  
