--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-01.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-01.md
@@ -113,7 +113,7 @@ Amazon Stock Approaching Breakout亚马逊股票接近突破
 
 
 Amazon stock bounced well above its 21-day moving average with Friday's action. Shares had slipped below the [short-term support level](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/) on Thursday with a 3% loss that came within a broader [Halloween-day sell-off](https://www.investors.com/market-trend/stock-market-today/stock-market-today-nasdaq-dow-jones-tech-stocks/).  
-亚马逊股价在周五的行动中反弹至远高于其 21 天移动平均线。周四，股价跌破[短期支撑位](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/)，下跌 3%，这是更广泛的[万圣节抛售](https://www.investors.com/market-trend/stock-market-today/stock-market-today-nasdaq-dow-jones-tech-stocks/)。
+亚马逊股票在周五的行动中反弹至远高于其 21 天移动平均线。周四，股价跌破[短期支撑位](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/)，下跌 3%，这是更广泛的[万圣节抛售](https://www.investors.com/market-trend/stock-market-today/stock-market-today-nasdaq-dow-jones-tech-stocks/)。
 
 
 Meanwhile, Amazon's [Relative Strength Rating](https://www.investors.com/ibd-university/find-evaluate-stocks/exclusive-ratings/) sits at 68 out of a best-possible 99. That means Amazon has outperformed 68% of stocks in IBD's database over the past 12 months. IBD recommends focusing on stocks with at least an 80 RS Rating.  
