--- a/_columns/The_Big_Picture/zh-cn/2024-10-31.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-10-31.md
@@ -167,11 +167,11 @@ Despite Thursday's weakness, stock market leaders to watch include **Ferrari** (
 
 
 Ferrari shares are pulling back to their 50-day line, as they build a flat base with a 498.23 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/), according to [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) pattern recognition.  
-根据 IBD MarketSurge 模式识别，法拉利股价正在回落至 50 日线，因为它们以 498.23 的买入点建立了 flat base。
+根据 [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 模式识别，法拉利股价正在回落至 50 日线，因为它们以 498.23 [的买入点](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/)建立了一个平坦的基础。
 
 
 Robotic surgery leader Intuitive Surgical gapped up from its 50-day and 10-week lines following the company's third-quarter report on Oct. 18. Shares are pulling back just above a tight area that formed a quasi flat base. Investors can use an Oct. 25 high of 516.89 as an entry.  
-机器人手术领导者 Intuitive Surgical 在 10 月 18 日发布第三季度报告后，从其 50 天和 10 周的产品线中脱颖而出。股价正在回落至形成准 flat base上方。投资者可以使用 10 月 25 日的高点 516.89 作为入场点。
+机器人手术领导者 Intuitive Surgical 在 10 月 18 日发布第三季度报告后，从其 50 天和 10 周的产品线中脱颖而出。股价正在回落至形成准平坦底部的狭窄区域上方。投资者可以使用 10 月 25 日的高点 516.89 作为入场点。
 
 
 And Brazilian financial leader Nu fell below a 15.16 buy point following Monday's breakout.  
