--- a/_columns/The_Big_Picture/zh-cn/2024-11-01.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-01.md
@@ -68,7 +68,7 @@ Noteworthy [earnings reports in the coming week](https://www.investors.com/resea
 [未来一周值得注意的收益报告](https://www.investors.com/research/earnings-preview/earnings-calendar-ai-chips-ferrari-arm-earnings/)包括 **Palantir** （[PLTR）、](https://research.investors.com/quote.aspx?symbol=PLTR)芯片股票 **Arm** （[ARM](https://research.investors.com/quote.aspx?symbol=ARM)）、**法拉利** （[RACE](https://research.investors.com/quote.aspx?symbol=RACE)） 和 **Vistra** （[VST](https://research.investors.com/quote.aspx?symbol=VST)）。
 
 
-Amazon Earnings Help This Stock Market Group亚马逊收益帮助这个股票市场集团
+Amazon Earnings Help This Stock Market Group亚马逊收益帮助这个股票市场群体
 -----------------------------------------------------------
 
 
