--- a/_columns/Stock_Of_the_Day/zh-cn/2024-10-30.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-10-30.md
@@ -13,13 +13,13 @@ author: ALLISON GATLIN
 
 
 **Intuitive Surgical** ([ISRG](https://research.investors.com/quote.aspx?symbol=ISRG)) stock is Wednesday's [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/). Shares gapped higher following the robotic surgery titan's September-quarter beat and are now staring down a fresh buy point.  
-**Intuitive Surgical** （[ISRG](https://research.investors.com/quote.aspx?symbol=ISRG)） 股票是周三的[今日 IBD 股票](https://www.investors.com/research/ibd-stock-of-the-day/)。在这家机器人手术巨头 9 月季度表现不佳后，股价跳空走高，现在正盯着一个新的买入点。
+**Intuitive Surgical** （[ISRG）](https://research.investors.com/quote.aspx?symbol=ISRG) 股票是周三的 [IBD 今日股票](https://www.investors.com/research/ibd-stock-of-the-day/)。在这家机器人手术巨头 9 月季度业绩超出预期后，股价跳空走高，现在正盯着一个新的买入点。
 
 
 
 
 The company is best-known for its [robotic surgery system](https://www.investors.com/news/technology/intuitive-surgical-stock-isrg-robotic-surgery-medtronic-jnj/), da Vinci. Intuitive Surgical is also in the midst of launching its newest system, [the da Vinci 5](https://www.investors.com/news/technology/intuitive-surgical-stock-robotic-surgery-da-vinci-5/). The key question, says William Blair analyst Brandon Vazquez, is whether Intuitive can deliver on heightened expectations.  
-该公司以其[机器人手术系统](https://www.investors.com/news/technology/intuitive-surgical-stock-isrg-robotic-surgery-medtronic-jnj/) da Vinci 而闻名。Intuitive Surgical 还在推出其最新的系统 [da Vinci 5](https://www.investors.com/news/technology/intuitive-surgical-stock-robotic-surgery-da-vinci-5/)。William Blair 分析师 Brandon Vazquez 表示，关键问题是 Intuitive 能否满足更高的期望。
+该公司以其[机器人手术系统](https://www.investors.com/news/technology/intuitive-surgical-stock-isrg-robotic-surgery-medtronic-jnj/) da Vinci 而闻名。Intuitive Surgical 也在推出其最新的系统[，即达芬奇 5](https://www.investors.com/news/technology/intuitive-surgical-stock-robotic-surgery-da-vinci-5/)。William Blair 分析师 Brandon Vazquez 表示，关键问题是 Intuitive 能否满足更高的期望。
 
 
 "We believe the answer is yes with near-, medium- and long-term tailwinds to support shorts," he said in a recent report to clients.  
@@ -27,7 +27,7 @@ The company is best-known for its [robotic surgery system](https://www.investors
 
 
 Intuitive Surgical stock gapped up from its [50-day](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/) and [10-week](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-why-the-10-week-moving-average-offers-new-entry-points/) lines following the company's [third-quarter report](https://www.investors.com/news/technology/intuitive-surgical-stock-intuitive-surgical-earnings-q3-2024/) on Oct. 18. Shares are pausing just above a tight area that forms a quasi [flat base](https://www.investors.com/how-to-invest/investors-corner/what-is-a-flat-base-skechers-stock-skx/). Investors can use an Oct. 25 high of 516.89 as an [entry](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/).  
-在 10 月 18 日发布第三[季度报告](https://www.investors.com/news/technology/intuitive-surgical-stock-intuitive-surgical-earnings-q3-2024/)后，Intuitive Surgical 股票从其 [50 天](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/)和 [10 周](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-why-the-10-week-moving-average-offers-new-entry-points/)线跳空上涨。股价在一个形成准[flat base](https://www.investors.com/how-to-invest/investors-corner/what-is-a-flat-base-skechers-stock-skx/)。投资者可以使用 10 月 25 日的高点 516.89 作为[入场](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/)点。
+在 10 月 18 日公司发布[第三季度报告](https://www.investors.com/news/technology/intuitive-surgical-stock-intuitive-surgical-earnings-q3-2024/)后，Intuitive Surgical 股票从其 [50 天](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/)和 [10 周](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-why-the-10-week-moving-average-offers-new-entry-points/)线跳空上涨。股价在形成准[平底](https://www.investors.com/how-to-invest/investors-corner/what-is-a-flat-base-skechers-stock-skx/)的狭窄区域上方暂停。投资者可以使用 10 月 25 日的高点 516.89 作为[入场](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/)点。
 
 
 Procedure Growth Push Intuitive Surgical Stock程序生长推动直观手术库存
@@ -39,11 +39,11 @@ The third quarter featured a number of promising updates.
 
 
 The number of procedures performed using da Vinci robotic surgery systems climbed 18%. Investors pay close attention to this number because when more procedures take place, consumers buy more single-use instruments and accessories. Sales of those tools also surged 18% in the quarter, hitting $1.26 billion and beating expectations.  
-使用达芬奇机器人手术系统进行的手术数量攀升了 18%。投资者密切关注这一数字，因为当手术进行时，消费者会购买更多的一次性器械和配件。这些工具的销售额在本季度也飙升了 18%，达到 12.6 亿美元，超出预期。
+使用达芬奇机器人手术系统进行的手术数量攀升了 18%。投资者密切关注这个数字，因为当更多的程序发生时，消费者会购买更多的一次性器械和配件。这些工具的销售额在本季度也飙升了 18%，达到 12.6 亿美元，超出预期。
 
 
 Intuitive Surgical also placed 110 da Vinci 5 robots in the third quarter, accelerating from 70 in the second quarter. In the U.S., half of the robot placements were from the new system, Vazquez said. The installed base of Ion robots — which perform lung biopsies — popped 50%.  
-Intuitive Surgical 还在第三季度安装了 110 台达芬奇 5 机器人，比第二季度的 70 台有所增加。Vazquez 说，在美国，一半的机器人安装来自新系统。执行肺活检的 Ion 机器人的安装量增长了 50%。
+Intuitive Surgical 还在第三季度投放了 110 台达芬奇 5 机器人，比第二季度的 70 台有所增加。Vazquez 说，在美国，一半的机器人安置来自新系统。执行肺活检的 Ion 机器人的安装量激增了 50%。
 
 
 "In the near term, procedures are benefiting from growing acceptance of robotics beyond historical core procedures into a (total addressable market) still only about 10% penetrated, as well as da Vinci 5 that will provide another leg of incremental hospital demand," William Blair's Vazquez said.  
@@ -51,7 +51,7 @@ William Blair 的 Vazquez 说：“在短期内，手术受益于对机器人技
 
 
 Medium term, the company has hinted at software and hardware launched that could help drive adoption. And, in the long-term, these tailwinds could help drive additional trade-ins of older da Vinci systems for the newer 5, he said. He kept his outperform rating on Intuitive Surgical stock.  
-从中期来看，该公司暗示将推出有助于推动采用的软件和硬件。而且，他说，从长远来看，这些利好因素可能有助于推动旧的达芬奇系统以旧换新。他维持对 Intuitive Surgical 股票的跑赢大盘评级。
+从中期来看，该公司暗示将推出有助于推动采用的软件和硬件。而且，从长远来看，这些利好因素可能有助于推动旧的达芬奇系统以旧换新，以换取新的 5。他维持了对 Intuitive Surgical 股票的跑赢大盘评级。
 
 
 'Full Ramp Mode' Ahead For da Vinci 5达芬奇 5 的“全斜坡模式”
@@ -67,11 +67,11 @@ Evercore ISI 分析师 Vijay Kumar 在一份报告中表示，明年达芬奇 5 
 
 
 Though the results looked solid, Kumar questioned the value of Intuitive Surgical stock. The stock's price/earnings multiple has expanded by more than 60% from pre-pandemic levels on a forward basis. But the revenue outlook has stayed consistent vs. 2017 to 2019 levels. Operating margins continue to surprise to the upside.  
-尽管结果看起来很稳健，但 Kumar 对 Intuitive Surgical 股票的价值提出了质疑。该股的市盈率倍数从大流行前的水平远期增长了 60% 以上。但与 2017 年至 2019 年的水平相比，收入前景保持一致。营业利润率继续意外上行。
+尽管结果看起来很可靠，但 Kumar 质疑 Intuitive Surgical 股票的价值。该股的市盈率倍数从大流行前的水平远期增长了 60% 以上。但与 2017 年至 2019 年的水平相比，收入前景保持一致。营业利润率继续意外上行。
 
 
 "Generally, growth stock price/earnings are driven by revenue acceleration and not operating margins," he said. "It seems like the Street is pricing in a big revenue beat for fiscal year 2025."  
-“一般来说，成长型股票价格/收益是由收入加速而不是营业利润率驱动的，”他说。“华尔街似乎正在定价 2025 财年的收入大幅超过预期。”
+“一般来说，成长型股价/收益是由收入加速驱动的，而不是由营业利润率驱动的，”他说。“华尔街似乎正在定价 2025 财年的收入大幅增长。”
 
 
 He kept his in-line rating on Intuitive Surgical stock, but raised his price target to 490 from 475.  
